functional issue with wrapping long song name

--- a/style.css
+++ b/style.css
@@ -1,45 +1,121 @@
 .form-inline{
-display: flex;
-justify-content: center;
-padding-top: 20px;
-position: absolute;
-text-align: center;
-bottom: 450px;
-left: 0;
-right: 0;
-
-}
-
-.bg-image {
-    position: relative;
-}
-.bg-image img {
-    display: block;
-    width: 100%;
-    max-width: 1200px; /* corresponds to max height of 450px */
-    margin: 0 auto;
-}
-.bg-image h1 {
+    display: flex;
+    justify-content: center;
+    padding-top: 20px;
     position: absolute;
     text-align: center;
-    bottom: 500px;
+    bottom: 65px;
     left: 0;
     right: 0;
-    color: rgb(209, 16, 16);
-}
-.nav, .main {
-    background-color: #f6f6f6;
-    text-align: center;
-}
+    
+    }
+    
+    .bg-image {
+        position: relative;
+    }
+    .bg-image img {
+        display: block;
+        width: 100%;
+        max-width: 1200px; /* corresponds to max height of 450px */
+        margin: 0 auto;
+    }
 
-.outline {
-    outline: #00FF00 dotted thick;
-    padding-left: 40px;
-}
+    .bg-image h3 {
+        position: relative;
+        text-align: center;
+        bottom: 210px;
+        left: 0;
+        right: 0;
+        color:white;
+        font-family: Saira Semi Condensed;
+        font-weight: 400;
+        font-size: 50px
+    }
 
-.album-price{
-    display: flex;
-    justify-content: flex-start;
-    justify-content: space-between;
-    padding-right: 40px
-}
+    
+    .outline {
+        outline: #00FF00 dotted thick;
+        padding-left: 40px;
+    }
+    
+    .album-price{
+        display: flex;
+        justify-content: flex-start;
+        justify-content: space-between;
+        padding-right: 40px
+    }
+
+  
+    .btn {
+        display: inline-block;
+        padding: 6px 12px;
+        margin-bottom: 0;
+        font-size: 14px;
+        font-weight: normal;
+        line-height: 1.42857143;
+        text-align: center;
+        white-space: nowrap;
+        vertical-align: middle;
+        cursor: pointer;
+        -webkit-user-select: none;
+           -moz-user-select: none;
+            -ms-user-select: none;
+                user-select: none;
+        background-image: none;
+        border: 1px solid transparent;
+        border-radius: 4px;
+        padding: 10px 16px;
+      }
+        
+      .btn-lg {
+        font-size: 18px;
+        line-height: 1.33;
+        border-radius: 6px;
+      }
+      
+      .btn-primary {
+        color: #fff;
+        background-color: #a3a09b;
+\
+      }
+      
+      .btn-primary:hover,
+      .btn-primary:focus,
+      .btn-primary:active,
+      .btn-primary.active,
+      .open .dropdown-toggle.btn-primary {
+        color: #fff;
+        background-color: #a3a09b;
+      }
+      
+      .round {
+        border-radius: 24px;
+      }
+      
+      
+      .btn {
+          padding: 14px 24px;
+          border: 0 none;
+          font-weight: 700;
+          letter-spacing: 1px;
+          text-transform: uppercase;
+      }
+      .btn:focus, .btn:active:focus, .btn.active:focus {
+          outline: 0 none;
+      }
+      
+      .btn-primary {
+          background: white;
+          color: #ff8e00;
+      }
+      .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
+          background: #a3a09b;
+      }
+      .btn-primary:active, .btn-primary.active {
+          background: #a3a09b;
+          box-shadow: none;
+      }
+
+      .big-number {
+          font-family: Raleway; 
+      }
